deployments/kubernetes/cluster/ingress--traefik-ui.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-app: traefik-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: traefik-ui-auth
spec:
  rules:
  - host: traefik-ui.192.168.99.100.xip.io
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
